--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/index.js",
     "start:ts": "nodemon src/index.ts",
     "dev": "concurrently npm:watch npm:start:ts npm:gen:watch",
-    "gen:watch": "graphql-codegen --config codegen.yml --watch"
+    "gen:watch": "graphql-codegen --config codegen.yml --watch",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@graphql-tools/graphql-file-loader": "^7.3.12",
@@ -19,6 +20,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.5.1",
+    "@graphql-codegen/typescript-resolvers": "2.6.6",
+    "@graphql-codegen/introspection": "2.1.1",
     "@swc/core": "^1.2.181",
     "@swc/helpers": "^0.3.13",
     "@types/node": "^17.0.35",
