formatting on generation

--- a/backend/codegen.yml
+++ b/backend/codegen.yml
@@ -9,3 +9,7 @@ generates:
   ./graphql.schema.json:
     plugins:
       - "introspection"
+hooks:
+  afterAllFileWrite:
+    - prettier --write
+    - eslint --fix
