--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,16 @@
     "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/schema": "^8.3.13",
     "@graphql-tools/utils": "^8.6.12",
+    "apollo-datasource": "^3.3.2",
+    "apollo-datasource-cosmosdb": "^0.1.0",
     "apollo-server": "^3.9.0",
     "graphql": "^16.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-resolvers": "2.6.6",
-    "@graphql-codegen/introspection": "2.1.1",
     "@swc/core": "^1.2.181",
     "@swc/helpers": "^0.3.13",
     "@types/node": "^17.0.35",
