cosmos implementation and starting mutations

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start:ts": "nodemon src/index.ts",
     "dev": "concurrently npm:watch npm:start:ts npm:gen:watch",
     "gen:watch": "graphql-codegen --config codegen.yml --watch",
-    "gen": "graphql-codegen --config codegen.yml"
+    "gen": "graphql-codegen --config codegen.yml",
+    "bootstrap": "ts-node src/data/data-loader.ts"
   },
   "dependencies": {
     "@azure/cosmos": "^3.16.1",
@@ -28,10 +29,13 @@
     "@graphql-codegen/typescript-resolvers": "2.6.6",
     "@swc/core": "^1.2.181",
     "@swc/helpers": "^0.3.13",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.2.0",
+    "dotenv": "^16.0.1",
+    "dotenv-flow": "^3.2.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
