--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently npm:gen:watch npm:vite",
+    "vite": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen": "graphql-codegen --config codegen.yml",
+    "gen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.6.2",
@@ -21,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "concurrently": "^7.2.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -30,6 +34,11 @@
     "prettier": "^2.6.2",
     "typescript": "^4.7.4",
     "vite": "^2.9.9",
-    "vite-plugin-eslint": "^1.6.0"
+    "vite-plugin-eslint": "^1.6.0",
+    "@graphql-codegen/typescript-operations": "2.4.2",
+    "@graphql-codegen/typescript": "2.5.1",
+    "@graphql-codegen/typescript-document-nodes": "2.2.13",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/cli": "2.6.2"
   }
 }
